--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
     <body>
 
         <nav class="navbar navbar-expand-lg lg-secondary text-uppercase fexed-top" id="main nav">
-            <div class="container">
-                <a class="navbar-brand" href="#">Saksham Raghuvanshi</a>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#" >Saksham Raghuvanshi</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     &#9776;
                     <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#porjects" id="navmenu" >Projects</a></li>
+                        <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="Websites" id="navmenu" >Websites</a></li>
+                        <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#pages" id="navmenu">Pages</a></li>
+                        </ul>
+                    </div>
             </div>
         </nav>
 
