--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="icon" type="image/x-icon" href="./resources/img/favicon.ico" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./resources/css/style.css">
+        <script src="https://kit.fontawesome.com/34a28b22f1.js" crossorigin="anonymous"></script>
+
     </head>   
     <body>
 
@@ -15,7 +17,6 @@
                 <a class="navbar-brand" href="#" >Saksham Raghuvanshi</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     &#9776;
-                    <i class="fas fa-bars"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
@@ -30,7 +31,25 @@
             </div>
         </nav>
 
+        <header class="masthead text-white text-center" style="background-color: #627c96; ">
+            <div class="container d-flex align-items-center flex-column">
+                <img  id="avatar"class="masthead-avatar mt-5 mb-2" src="./resources/img/avatar.png" alt="Avatar-saksham-raghuvanshi">
+                <h1 class="masthead-heading text-uppercase mb-0">Saksham Raghuvanshi</h1>
 
+
+
+            </div>
+
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"><i class="fa-regular fa-horizontal-rule"></i></i></div>
+                <div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-code"></i></div>
+                <div class="divider-custom-line"><i class="fa-solid fa-horizontal-rule"></i></div>
+            </div>
+            <p class="masthead-subheading font-weight-light mt-1">Web Developer - Web Designer | Digital Creator  </p>
+        </div>
+        </header>
+
+     
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
