--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./resources/css/style.css">
         <script src="https://kit.fontawesome.com/34a28b22f1.js" crossorigin="anonymous"></script>
-
     </head>   
     <body>
 
@@ -21,7 +20,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#porjects" id="navmenu" >Projects</a></li>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#projects" id="navmenu" >Projects</a></li>
                         <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded" href="Websites" id="navmenu" >Websites</a></li>
                         <li class="nav-item mx-0 mx-lg-1">
@@ -41,13 +40,34 @@
             </div>
 
             <div class="divider-custom divider-light">
-                <div class="divider-custom-line"><i class="fa-regular fa-horizontal-rule"></i></i></div>
+                <div class="divider-custom-line"><i class="fa-regular fa-horizontal-rule"></i></div>
                 <div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-code"></i></div>
                 <div class="divider-custom-line"><i class="fa-solid fa-horizontal-rule"></i></div>
             </div>
             <p class="masthead-subheading font-weight-light mt-1">Web Developer - Web Designer | Digital Creator  </p>
         </div>
         </header>
+
+
+        <section class="page-section projects" id="projects">
+            <div class="container mt-5">
+
+                <h2 class="page-section-heading text-center text-uppercase mb-0" id="heading1">Projects</h2>
+
+            </div>
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line" id="line"><i class="fa-regular fa-horizontal-rule"></i></div>
+                <div class="divider-custom-icon" id="icon"><i class="fa-sharp fa-solid fa-code"></i></div>
+                <div class="divider-custom-line" id="line"><i class="fa-solid fa-horizontal-rule"></i></div>
+            </div>
+
+
+
+
+
+        </section>
+
+
 
      
 
