--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>   
     <body>
 
+
         <nav class="navbar navbar-expand-lg lg-secondary text-uppercase fexed-top" id="main nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#" >Saksham Raghuvanshi</a>
@@ -54,13 +55,28 @@
 
                 <h2 class="page-section-heading text-center text-uppercase mb-0" id="heading1">Projects</h2>
 
-            </div>
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line" id="line"><i class="fa-regular fa-horizontal-rule"></i></div>
                 <div class="divider-custom-icon" id="icon"><i class="fa-sharp fa-solid fa-code"></i></div>
                 <div class="divider-custom-line" id="line"><i class="fa-solid fa-horizontal-rule"></i></div>
             </div>
 
+            
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        First in DOM, no order applied
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        Second in DOM, no order applied
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        Third in DOM, no order applied
+                    </div>
+                </div>
+
+                </div>
 
 
 
@@ -68,7 +84,9 @@
         </section>
 
 
-
+        <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+            <i class="fas fa-arrow-up"></i>
+        </button>
      
 
 
